// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom post type works with custom post types (doesn't exist in source.post) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "12": Object {
      "author": 1,
      "id": 12,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "slug": "attachment-cpt-11",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "cpt": Object {
    "11": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          12,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 12,
      "id": 11,
      "link": "/cpt/cpt-11/",
      "slug": "cpt-11",
      "tags": Array [
        1,
      ],
      "type": "cpt",
    },
  },
  "data": Object {
    "/?p=11&post_type=cpt": Object {
      "id": 11,
      "isCpt": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "link": "/?p=11&post_type=cpt",
      "page": 1,
      "query": Object {
        "p": "11",
        "post_type": "cpt",
      },
      "route": "/",
      "type": "cpt",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/cpt/cpt-11/": Object {
      "id": 11,
      "isFetching": false,
      "isReady": false,
      "link": "/cpt/cpt-11/",
      "page": 1,
      "query": Object {},
      "route": "/cpt/cpt-11/",
      "type": "cpt",
    },
    "/cpt/cpt-11/attachment-cpt-11/": Object {
      "id": 12,
      "isFetching": false,
      "isReady": false,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "page": 1,
      "query": Object {},
      "route": "/cpt/cpt-11/attachment-cpt-11/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`custom post type works with custom post types (exists in source.post) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "12": Object {
      "author": 1,
      "id": 12,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "slug": "attachment-cpt-11",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "cpt": Object {
    "11": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          12,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 12,
      "id": 11,
      "link": "/cpt/cpt-11/",
      "slug": "cpt-11",
      "tags": Array [
        1,
      ],
      "type": "cpt",
    },
  },
  "data": Object {
    "/?p=11&post_type=cpt": Object {
      "id": 11,
      "isCpt": true,
      "isFetching": false,
      "isPostType": true,
      "isReady": true,
      "link": "/?p=11&post_type=cpt",
      "page": 1,
      "query": Object {
        "p": "11",
        "post_type": "cpt",
      },
      "route": "/",
      "type": "cpt",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/cpt/cpt-11/": Object {
      "id": 11,
      "isFetching": false,
      "isReady": false,
      "link": "/cpt/cpt-11/",
      "page": 1,
      "query": Object {},
      "route": "/cpt/cpt-11/",
      "type": "cpt",
    },
    "/cpt/cpt-11/attachment-cpt-11/": Object {
      "id": 12,
      "isFetching": false,
      "isReady": false,
      "link": "/cpt/cpt-11/attachment-cpt-11/",
      "page": 1,
      "query": Object {},
      "route": "/cpt/cpt-11/attachment-cpt-11/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [
    Object {
      "endpoint": "cpts",
      "type": "cpt",
    },
  ],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page doesn't exist in source.page 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?page_id=1": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?page_id=1",
      "page": 1,
      "query": Object {
        "page_id": "1",
      },
      "route": "/",
      "type": "page",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page exists in source.page 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?page_id=1": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?page_id=1",
      "page": 1,
      "query": Object {
        "page_id": "1",
      },
      "route": "/",
      "type": "page",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page works with query params (doesn't exist in source.page) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?page_id=1&some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?page_id=1&some=param",
      "page": 1,
      "query": Object {
        "page_id": "1",
        "some": "param",
      },
      "route": "/",
      "type": "page",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`page works with query params (exists in source.page) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?page_id=1&some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPage": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?page_id=1&some=param",
      "page": 1,
      "query": Object {
        "page_id": "1",
        "some": "param",
      },
      "route": "/",
      "type": "page",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/page-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/page-1/",
      "page": 1,
      "query": Object {},
      "route": "/page-1/",
      "type": "page",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
      },
      "author": 1,
      "featured_media": 1,
      "id": 1,
      "link": "/page-1/",
      "slug": "page-1",
      "type": "page",
    },
  },
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post doesn't exist in source.post 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?p=1": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?p=1",
      "page": 1,
      "query": Object {
        "p": "1",
      },
      "route": "/",
      "type": "post",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post exists in source.post 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?p=1": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?p=1",
      "page": 1,
      "query": Object {
        "p": "1",
      },
      "route": "/",
      "type": "post",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post works with query params (doesn't exist in source.post) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?p=1&some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?p=1&some=param",
      "page": 1,
      "query": Object {
        "p": "1",
        "some": "param",
      },
      "route": "/",
      "type": "post",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post works with query params (exists in source.post) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?p=1&some=param": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?p=1&some=param",
      "page": 1,
      "query": Object {
        "p": "1",
        "some": "param",
      },
      "route": "/",
      "type": "post",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post works with types embedded 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?p=1": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?p=1",
      "page": 1,
      "query": Object {
        "p": "1",
      },
      "route": "/",
      "type": "post",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
    "undefined": Object {
      "isFetching": false,
      "isReady": false,
      "link": undefined,
      "page": 1,
      "query": Object {},
      "route": undefined,
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "type": Array [
          "post",
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {
    "post": Object {
      "description": "",
      "hierarchical": false,
      "name": "Posts",
      "slug": "post",
      "taxonomies": Array [
        "category",
        "tag",
      ],
    },
  },
  "url": "https://test.frontity.org",
}
`;

exports[`post works with unordered query params (doesn't exist in source.post) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?a=v2&p=1&z=v1": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?a=v2&p=1&z=v1",
      "page": 1,
      "query": Object {
        "a": "v2",
        "p": "1",
        "z": "v1",
      },
      "route": "/",
      "type": "post",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`post works with unordered query params (exists in source.post) 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {
    "1": Object {
      "author": 1,
      "id": 1,
      "link": "/post-1/attachment-1/",
      "slug": "attachment-1",
      "type": "attachment",
    },
  },
  "author": Object {
    "1": Object {
      "id": 1,
      "link": "/author/author-1/",
      "name": "Author 1",
      "slug": "author-1",
    },
  },
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?a=v2&p=1&z=v1": Object {
      "id": 1,
      "isFetching": false,
      "isPost": true,
      "isPostType": true,
      "isReady": true,
      "link": "/?a=v2&p=1&z=v1",
      "page": 1,
      "query": Object {
        "a": "v2",
        "p": "1",
        "z": "v1",
      },
      "route": "/",
      "type": "post",
    },
    "/author/author-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/author/author-1/",
      "page": 1,
      "query": Object {},
      "route": "/author/author-1/",
    },
    "/post-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/",
      "type": "post",
    },
    "/post-1/attachment-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/post-1/attachment-1/",
      "page": 1,
      "query": Object {},
      "route": "/post-1/attachment-1/",
      "type": "attachment",
    },
    "/tag/tag-1/": Object {
      "id": 1,
      "isFetching": false,
      "isReady": false,
      "link": "/tag/tag-1/",
      "page": 1,
      "query": Object {},
      "route": "/tag/tag-1/",
      "taxonomy": "tag",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {
    "1": Object {
      "_embedded": Object {
        "author": Array [
          1,
        ],
        "wp:featuredmedia": Array [
          1,
        ],
        "wp:term": Array [
          Array [
            1,
          ],
          Array [
            1,
          ],
        ],
      },
      "author": 1,
      "categories": Array [
        1,
      ],
      "featured_media": 1,
      "id": 1,
      "link": "/post-1/",
      "slug": "post-1",
      "tags": Array [
        1,
      ],
      "type": "post",
    },
  },
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {
    "1": Object {
      "count": 5,
      "id": 1,
      "link": "/tag/tag-1/",
      "parent": 0,
      "slug": "tag-1",
      "taxonomy": "tag",
    },
  },
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`postType returns 404 if not found 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?p=1": Object {
      "errorStatus": 404,
      "errorStatusText": "Not Found",
      "is404": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
      "link": "/?p=1",
      "page": 1,
      "query": Object {
        "p": "1",
      },
      "route": "/",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;

exports[`postType should contain the correct error code on error 1`] = `
Object {
  "api": "https://test.frontity.org/wp-json/",
  "attachment": Object {},
  "author": Object {},
  "authorBase": "",
  "category": Object {},
  "categoryBase": "",
  "data": Object {
    "/?p=1": Object {
      "errorStatus": 400,
      "errorStatusText": "Bad Request",
      "is400": true,
      "isError": true,
      "isFetching": false,
      "isReady": true,
      "link": "/?p=1",
      "page": 1,
      "query": Object {
        "p": "1",
      },
      "route": "/",
    },
  },
  "entity": [Function],
  "get": [Function],
  "homepage": "",
  "isWpCom": false,
  "page": Object {},
  "params": Object {},
  "post": Object {},
  "postEndpoint": "posts",
  "postTypes": Array [],
  "postsPage": "",
  "redirections": "no",
  "subdirectory": "",
  "tag": Object {},
  "tagBase": "",
  "taxonomies": Array [],
  "taxonomy": Object {},
  "type": Object {},
  "url": "https://test.frontity.org",
}
`;
